# Metabuli

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml  buildIdx.cpp  test.tsv  test_refined.tsv
build-asan/: CMakeCache.txt  Makefile  cmake_install.cmake
build-asan/data/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/data/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/data/resources/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/data/workflow/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/lib/alp/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/lib/cacode/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/lib/ksw2/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/lib/microtar/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/lib/tinyexpr/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/src/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/src/alignment/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/src/clustering/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/src/commons/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/src/linclust/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/src/multihit/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/src/prefiltering/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/src/taxonomy/: Makefile  cmake_install.cmake
build-asan/lib/mmseqs/src/util/: Makefile  (+1 more)
build-asan/lib/prodigal/: Makefile  cmake_install.cmake
build-asan/src/: Makefile  cmake_install.cmake
build-asan/src/commons/: Makefile  cmake_install.cmake
build-asan/src/util/: Makefile  cmake_install.cmake
build-asan/src/version/: Makefile  cmake_install.cmake
build-asan/src/workflow/: Makefile  cmake_install.cmake
data/: CMakeLists.txt  metabulidatabases.sh
lib/csv-parser/: CMakeLists.txt
lib/csv-parser/include/internal/: CMakeLists.txt  common.hpp
lib/fastq_utils/: CMakeLists.txt  fastq.cpp  fastq.h  fastq_info.cpp  hash.cpp  hash.h
lib/mmseqs-my/src/commons/: Parameters.cpp  Parameters.h
lib/mmseqs/src/: CMakeLists.txt
lib/mmseqs/src/commons/: StringBlock.h  Util.h
lib/mmseqs/src/taxonomy/: NcbiTaxonomy.cpp  NcbiTaxonomy.h
lib/prodigal/: CMakeLists.txt  bitmap.cpp  bitmap.h  dprog.cpp  dprog.h  gene.cpp  gene.h  main.cpp  metagenomic.cpp  metagenomic.h  node.cpp  node.h  prodigalsequence.cpp  prodigalsequence.h  training.h
lib/yxml/: CMakeLists.txt  yxml.c  yxml.h
lib2/: CMakeLists.txt  NcbiTaxonomy.cpp  NcbiTaxonomy.h
src/: BitManipulateMacros.h  CMakeLists.txt  DiffIdxMerger.cpp  DiffIdxMerger.h  IndexCreator.cpp  IndexCreator.h  Kmer.h  KmerExtractor.cpp  KmerExtractor.h  LocalCommandDeclarations.h  MetabuliBase.cpp  Mmap.h  Searcher.cpp  Searcher.h  adclassifier.cpp  common.h  count8mers.cpp  createTargetDB.cpp  createTargetDB.h  fileUtil.cpp  main.cpp  metabuli.cpp  printBinary.cpp
src/benchmark/: CMakeLists.txt  makeBenchmarkSet.cpp  makeInclusionQuerySet.cpp  makeQuerySet.cpp  makeVirusBenchmarkSet.cpp
src/commons/: BitManipulateMacros.h  CMakeLists.txt  Classifier.cpp  Classifier.h  DeltaIdxReader.h  DiffIdxMerger.cpp  DiffIdxMerger.h  FileMerger.cpp  FileMerger.h  GeneticCode.h  Genus.cpp  Genus.h  GroupGenerator.cpp  GroupGenerator.h  IndexCreator.cpp  IndexCreator.h  Kmer.h  KmerBuffer.h  KmerExtractor.cpp  KmerExtractor.h  KmerMatcher.cpp  KmerMatcher.h  KmerScanner.h  LocalCommand.cpp  LocalCommand.h  LocalParameters.cpp  LocalParameters.h  LocalUtil.cpp  LocalUtil.h  Match.h  Mmap.h  ProdigalWrapper.cpp  ProdigalWrapper.h  ProdigalWrapper2.cpp  ProdigalWrapper2.h  Query.cpp  Query.h  QueryFilter.cpp  QueryFilter.h  QueryIndexer.cpp  (+24 more)
src/read-group/: CMakeLists.txt  GroupGenerator.cpp  GroupGenerator.h
src/uniref/: CMakeLists.txt  UnirefClassifier.cpp  UnirefClassifier.h  UnirefDbCreator.cpp  UnirefDbCreator.h  UnirefTree.cpp  UnirefTree.h
src/util/: CMakeLists.txt  accession2taxid.cpp  accession2taxid.h  apply-threshold.cpp  benchmark.cpp  benchmark.h  binning2report.cpp  classified2full.cpp  classifiedRefiner.cpp  count_common_kmers.cpp  create_common_kmer_list.cpp  create_unique_kmer_list.cpp  createnewtaxalist.cpp  createnewtaxalist.h  database-report.cpp  editNames.cpp  editNames.h  expand_diffidx.cpp  filter_by_genus.cpp  genus_level_test.cpp  grade.cpp  gradeByCladeSize.cpp  ictv-challenge-format.cpp  makeAAoffset.cpp  makeBenchmarkSet.cpp  mapping2taxon.cpp  memoryCheck.cpp  printDeltaIdx.cpp  printinfo.cpp  query2reference.cpp  report.cpp  report.h  seqHeader2TaxId.cpp  taxdump.cpp  uniref2taxonomy.cpp  validateDatabase.cpp  validateDatabase.h
src/version/: CMakeLists.txt  Version.cpp
src/workflow/: CMakeLists.txt  add_to_library.cpp  apply-threshold.cpp  assign-uniref.cpp  benchmark.cpp  benchmark.h  build.cpp  build_dir.cpp  build_fasta.cpp  classify.cpp  classify.h  create-uniref-tree.cpp  create-unirefdb.cpp  createTargetDB.cpp  createTargetDB.h  exclusion_test.cpp  exclusion_test_hiv.cpp  extract.cpp  filter.cpp  grade.cpp  groupGeneration.cpp  inclusion_test.cpp  inclusion_test_hiv.cpp  kaiju_scoring.cpp  krakenuniq_test.cpp  prepareForTargetDB.cpp  prepareForTargetDB_GTDB.cpp  updateDB.cpp  updateTargetDB.cpp
util/: build_osx.sh  build_windows.sh  fastq2fasta.sh  gtdb_to_taxdump.py  make_assacc_to_gtdb_taxid.sh  make_assacc_to_ncbi_taxid.sh  make_taxIdList_and_concatenatedGenome.sh  makequery.sh  metabuli_wrapper.sh  prepare_gtdb_taxonomy.sh  unzip_and_list.sh
util/gtdb_to_taxdump/: .gitignore  .gitpod.yml  .travis.yml  LICENSE  README.md  environment.yml  setup.py
util/gtdb_to_taxdump/.github/workflows/: python-publish.yml  pythonpackage.yml
util/gtdb_to_taxdump/gtdb2td/: Dmp.py  Graph.py  IO.py  Utils.py  __init__.py
util/gtdb_to_taxdump/other_utils/: taxdump_merge.py
util/gtdb_to_taxdump/tests/: test_Dmnd.py  test_Lineage.py  test_Map.py  test_acc2tax.py  test_gtdb2td.py
util/gtdb_to_taxdump/uniref_utils/: unirefxml2clust50-90idx.py  unirefxml2fasta.py  unirefxml2tax.py
(+13 files in other folders)
